--- a/client/package.json
+++ b/client/package.json
@@ -26,13 +26,14 @@
     "http-server": "^14.1.1",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
-    "webpack-cli": "^5.1.1",
+    "webpack-cli": "^5.1.3",
     "webpack-dev-server": "^4.0.0",
-    "webpack-pwa-manifest": "^4.0.0",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
     "code-mirror-themes": "^1.0.0",
-    "idb": "^7.1.1"
+    "idb": "^7.1.1",
+    "node": "^20.2.0",
+    "webpack-pwa-manifest": "^4.0.0"
   }
 }
