--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Zach Hanson",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "express": "^4.18.2",
     "if-env": "^1.0.4"
   },
