--- a/client/package.json
+++ b/client/package.json
@@ -9,31 +9,26 @@
     "build": "webpack --mode production",
     "start": "webpack --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ZachITP/Zachs-Text-Editor.git"
-  },
-  "author": "Zach Hanson",
-  "license": "MIT",
+  "author": "2U",
+  "license": "UNLICENSED",
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/runtime": "^7.15.3",
-    "babel-loader": "^9.1.2",
+    "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "http-server": "^14.1.1",
+    "http-server": "^0.11.1",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
-    "webpack-cli": "^5.1.3",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
-    "workbox-webpack-plugin": "^7.0.0"
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
     "code-mirror-themes": "^1.0.0",
-    "idb": "^7.1.1",
-    "node": "^20.2.0",
-    "webpack-pwa-manifest": "^4.0.0"
+    "idb": "^6.1.2"
   }
 }
