--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "zachs-text-editor",
-  "version": "1.0.0",
-  "engines:": {
-    "node": "14.17.3",
-    "npm": "6.14.13"
-  },
-  "description": "Zach's Text Editor",
-  "main": "server.js",
-  "scripts": {
-    "server": "nodemon server.js --ignore client"
-  },
-  "keywords": [],
-  "author": "Zach Hanson",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  }
+    "name": "zachs-text-editor",
+    "version": "1.0.0",
+    "engines:": {
+        "node": "14.17.3",
+        "npm": "6.14.13"
+    },
+    "description": "zachs text editor",
+    "main": "server.js",
+    "scripts": {
+        "server": "nodemon server.js --ignore client"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.4"
+    }
 }
